# Memento-Dialogue

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  nginx.conf
backend/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manual_test.py  pyproject.toml  run_server.py  test_api.py  test_api_manual.py  test_auth_comprehensive.py  test_dialogue_workflow.py
backend/app/: Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt  tasks.py
backend/app/core/: auth.py  config.py  database.py  deps.py  security.py  websocket.py
backend/app/models/: __init__.py  common.py  conversation.py  photo.py  session.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  conversation.py  photos.py  sessions.py  users.py  websocket.py
backend/app/services/: async_processor.py  chat_system.py  conversation_graph.py  conversation_manager.py  conversation_service.py  dialogue_prompt.py  dialogue_workflow.py  image_analyzer.py  question_generator.py
database/: schema.sql  seed_data.sql
docs/: 250817_1700-Supabase 프로젝트 및 DB 설정.md  250818_1000-Supabase DB 스키마 변경사항.md  250818_1745-구현 상세 가이드.md  250818_1745-아키텍처 개선 방향 및 구현 계획.md  250819-Album-Creation-Foreign-Key-Fix.md  api-endpoints.md
frontend/: CLAUDE.md  Dockerfile.dev  package-lock.json  package.json  pubspec.yaml  tailwind.config.js
frontend/android/app/: build.gradle.kts
frontend/data/: album_api.dart  photo_api.dart  report_api.dart  session_api.dart
frontend/lib/: main.dart  user_provider.dart
frontend/lib/core/: supabase_service.dart
frontend/lib/data/: album_api.dart  photo_api.dart  report_api.dart  session_api.dart
frontend/lib/models/: album.dart  photo.dart  question.dart  report.dart
frontend/lib/screens/: 0-3-1-1.dart  0-3-1.dart  0-3-2.dart  Photo_detail_screen.dart  add_photo_request.dart  add_photo_screen.dart  conversation_screen.dart  conversation_screen_simple.dart  gallery_screen.dart  home_screen.dart  intro_screen.dart  kakao_signin_screen.dart  mypage.dart  profile_input_screen.dart  report_list_screen.dart  report_main.dart  signin_screen.dart
frontend/lib/services/: user_service.dart  websocket_service.dart
frontend/lib/utils/: audio_service.dart  styles.dart
frontend/lib/widgets/: ai_record_play_sheet.dart  assistant_bubble.dart  audio_player_widget.dart  group_bar_widget.dart  image_card_widget.dart  info_dialog.dart  origin_record_play_sheet.dart  (+1 more)
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
supabase/: CLAUDE.md  config.toml
supabase/migrations/: 20250825154539_remote_schema.sql  20250827174634_remote_schema.sql
(+41 files in other folders)
