[tool.poetry]
name = "memento-box-backend"
version = "0.1.0"
description = "Memento Box Backend API"
authors = ["Team Memento Box"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.0.0,<3.0.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2023.3"
python-dateutil = "^2.8.2"
pygame = "^2.5.0"
openai = "^1.3.0"
tiktoken = "^0.5.0"
numpy = "^1.24.0"
soundfile = "^0.12.1"
pydub = "^0.25.1"
httpx = "0.27.2"
supabase = "^2.0.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-core = "^0.1.0"
langgraph = "^0.0.26"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88